--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="js/jquery.js"></script>
     <script src="js/materialize.min.js" ></script>
-    <script src="main2.js"></script>
+    <script src="main.js"></script>
 </head>
 <body class="green accent-2">
     <div class="container">
